# python-uv-project-template

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: python-package.yml  python-tests.yml
python_uv_project_template/: something.py
test_github_actions/: something.py
tests/: test_something.py
