[project]
name = "test-github-actions"
version = "0.1.0"
description = ""
authors = [{ name = "insolor", email = "insolor@gmail.com" }]
requires-python = ">=3.9"
readme = "README.md"

[dependency-groups]
dev = [
    "pytest>=7.4.3,<9.0.0",
    "pytest-cov>=4.1,<6.0",
    "hypothesis>=6.91.0,<7",
    "ruff>=0.4.7,<0.13.0",
]

[tool.hatch.build.targets.sdist]
include = ["test_github_actions"]

[tool.hatch.build.targets.wheel]
include = ["test_github_actions"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D"]  # Ignore all documentation warnings. Probably not the best option in real projects.
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",  # Don't warn about using of asserts in tests
    "ANN201",  # Don't warn on missing return type annotation in tests
]
